<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agrobot_fsm</name>
  <version>0.0.1</version>
  <description>Task state machines for the BYU Agrobotics Team</description>
  <maintainer email="snelsondurrant@gmail.com">Nelson Durrant</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  
  <build_depend>rosidl_default_runtime</build_depend>
  <build_depend>agrobot_interfaces</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>agrobot_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>

  </export>
</package>
